[package]
name = "hatwell"
version = "0.1.0"
author = ["BlueHat 2021"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = { version = "= 1.6.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.6"
serde_json = "1.0"

itertools = "0.10.0"
